longhorn/dashboard.k8s.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.local.nejlikka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
