longhorn/ingress-longhorn-dashboard.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-le-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: authentik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: longhorn.nejlikka.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
  - hosts:
    - longhorn.nejlikka.com
    secretName: longhorn-dashboard-cert
